resources/screen-common.less
/* ... */
#p-views,
#p-more {
	float: right;

	li {
		margin-left: 1em;
	}
}

#ca-watch a {
	.ca-icon( 'images/star' );
	.ca-icon-only();
}

#ca-unwatch a {
	.ca-icon( 'images/star-filled' );
	.ca-icon-only();
}

#ca-unwatch.mw-watchlink-temp a {
	.ca-icon( 'images/star-half-filled' );
	.ca-icon-only();
}

#ca-edit a {
	.ca-icon( 'images/pencil-grey' );
}

#ca-history a,
#ca-undelete a {
	.ca-icon( 'images/clock-grey' );
}

#ca-talk a {
	.ca-icon( 'images/talk-grey' );
}

#ca-addsection a {
	.ca-icon( 'images/plus-grey' );
}

#ca-viewsource a {
	.ca-icon( 'images/wikitext-grey' );
}

#ca-view a,
#ca-view-foreign a {
	.ca-icon( 'images/eyeball-grey' );
}

#ca-view {
	.hidden();
}

#ca-nstab-special {
	.hidden();
}

/* Wikiplus */
#Wikiplus-Edit-TopBtn a {
	.ca-icon( 'images/wikiplus-grey' );
}

/* ToolsRedirect */
#ca-redirect a {
	.ca-icon( 'images/redirect-grey-ltr' );
}

.mw-content-rtl #ca-redirect a {
	.ca-icon( 'images/redirect-grey-rtl' );
}

/* MassEditRegex */
#ca-masseditregex a {
	.ca-icon( 'images/pencil-batch-grey' );
}

/* Namespaces */
#p-namespaces {
	float: left;

	li {
		margin-right: 1em;
	}
}

/* Fallback */
.tools-inline li[ id^='ca-nstab-' ] a {
	.ca-icon( 'images/page-grey' );
}

#siteNotice {
	font-size: 95%;
	margin: 0.5em auto 1.5em;
}

#localNotice {
	padding: 0;
	text-align: center;

	p {
		margin-left: 1em;
		margin-right: 1em;
	}
}

/* Misc */

a {
	text-decoration: none;
	color: @link;

	&:hover {
		color: darken( @link, 10% );
		text-decoration: underline;
	}

	&:visited {
		color: @link-visited;

		&:hover {
			color: darken( @link-visited, 10% );
		}
	}
}

a.new,
.new a {
	color: @link-red;

	&:hover {
		color: darken( @link-red, 10% );
	}

	&:visited {
		color: @link-red-visited;

		&:hover {
			color: darken( @link-red-visited, 10% );
		}
	}
}

.mw-parser-output a.extiw,
.mw-parser-output a.extiw:active,
.mw-parser-output a.external {
	color: @link-ext;
	background-image: url( images/external-ltr.svg );
	background-repeat: no-repeat;
	background-position: center right;
	background-size: 12px;
	padding-right: 14px;

	&:hover {
		color: darken( @link-ext, 10% );
	}

	&:visited {
		color: @link-ext-visited;

		&:hover {
			color: darken( @link-ext-visited, 10% );
		}
	}
}

.mw-content-rtl .mw-parser-output a.extiw,
.mw-content-rtl .mw-parser-output a.extiw:active,
.mw-content-rtl .mw-parser-output a.external {
	background-image: url( images/external-rtl.svg );
}

a.mw-selflink {
	color: inherit;
	font-weight: bold;
	text-decoration: inherit;
}

.mw-editsection {
	font-family: @fonts;
	background-image: url( images/pencil-grey.svg );
	background-repeat: no-repeat;
	background-position: left bottom;
	padding-left: 20px;
	padding-top: 0.5em;
	display: inline-block;

	a {
		display: inline-block;
		padding: 0.5em 0 0.25em;
		margin-right: 1em;

		&:first-of-type {
			/* make the icon part of the first link */
			padding-left: 20px;
			margin-left: -20px;
		}
	}
}

.mw-editsection-bracket {
	display: none;
}

.mw-indicators {
	float: right;
	margin-top: 0.25em;
	margin-left: 1em;

	img {
		/* Line up to baseline; expected indicator icon size is 20px */
		margin-top: -0.5em;
	}
}

.mw-indicator {
	display: inline-block;
	// margin: 0.65em 0 0 0.25em;
}

div.magnify a {
	display: block;
	text-indent: 20px;
	white-space: nowrap;
	overflow: hidden;
	width: 20px;
	height: 20px;
	margin: 0 0 0.5em 0.5em;
	background-image: url( images/magnify-ltr.svg );
}

/* Subtitle area
 * @see https://phabricator.wikimedia.org/T173951
 */
#contentSub {
	font-size: 84%;
	color: @base20;

	/* This forces "redirect page" (on a redirect page) etc. on a new line */
	.subpages {
		display: block;
	}
}

/* pre and code styles copypasted from core
 * /resources/src/mediawiki.skinning/elements.css and modified a bit
 * @see https://phabricator.wikimedia.org/T177142
 */

.screenplay,
code,
tt,
kbd,
pre,
samp,
.skin-gongbi .monospace {
	font-family: @fonts-mono;
}

.skin-gongbi .serif {
	font-family: @fonts-serif;
}

.skin-gongbi .sans-serif {
	font-family: @fonts-sans;
}

code,
pre,
.mw-code {
	color: #000;
	background-color: @base90;
	border: 1px solid @base80;
}

code {
	padding: 1px 4px;
}

pre,
.mw-code {
	padding: 1em;
	/* Wrap lines in overflow. T2260, T103780 */
	white-space: pre-wrap;
}

.mw-body {
	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	dt {
		font-weight: normal;
		font-family: @fonts-secondary;
		line-height: 1.125;
		margin: 1.25em 0 0.5em;
	}

	dt {
		font-weight: bold;
		font-family: @fonts-secondary;
		line-height: 1.125;
		margin: 1.5em 0 0.5em;
		margin-bottom: 0.1em;
	}

	dl {
		margin-top: 0.5em;
		margin-bottom: 0.5em;
	}

	form dt {
		margin: 0 0.5em 0 0;
	}

	h1.firstHeading {
		margin: 0.25em 0 0.5em;
		padding: 0 0 0.125em;
		border-bottom: solid 4px @blue;
	}

	h1 {
		font-size: 2em;
		border-bottom: solid 3px @base70;
	}

	h2 {
		font-size: 1.8em;
		border-bottom: solid 2px @base70;
	}

	h3 {
		font-size: 1.75em;
	}

	h4 {
		font-size: 1.5em;
	}

	h5 {
		font-size: 1.25em;
	}

	h6 {
		font-size: 1.2em;
	}

	dt {
		margin-top: 1em;
	}

	dd {
		margin-bottom: 0;
	}

	/* overflow:hidden on the header itself breaks tall scripts, but we need to hide
	 * overflow on the border itself in output for proper thumb handling. Too weird to
	 * change this everywhere, so we'll just do it for parser output for now.
	 */
	.mw-parser-output {
		h1,
		h2 {
			border-bottom: 0;

			&:after {
				content: '';
				display: block;
				border-bottom: solid 2px @base70;
				overflow: hidden;
			}
		}

		h1:after {
			border-bottom-width: 3px;
		}
	}
}

// Keep images from overflowing
.mw-body-content a > img,
.mw-body-content .floatnone > img {
	height: auto !important;
	max-width: 85% !important;
}

a > img,
.floatnone > img {
	// Hopefully these are only templates or something sane to begin with
	// See: T269970
	.mw-body-content table & {
		height: unset !important;
		max-width: unset !important;
	}
}
/* ... */

